# intel-8080-simulator

./: .gitignore  CMakeLists.txt  DEV.md  LICENSE  ReadMe.md  conanfile.py
builder/: command.py
builder/actions/: defaults.py
builder/controllers/: conan_install.py
builder/controllers/wrappers/: conan.py
conan/: licenses.py
conan/recipes/systemc/: config.yml
conan/recipes/systemc/all/: conandata.yml  conanfile.py
conan/recipes/systemc/all/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
include/: alu.hpp  common.hpp  cu.hpp  log.hpp  memory.hpp  memory.tpp  mut.hpp  oslogger.hpp  processor.hpp  reg.hpp  utils.hpp
src/: alu.cpp  cu.cpp  log.cpp  main.cpp  memory.cpp  reg.cpp  utils.cpp
tests/: CMakeLists.txt  alu-tests.cpp  cu-tests.cpp  main.cpp  memory-tests.cpp  modules.cpp  processor-tests.cpp
tests/include/: modules.hpp
